exports[`Storyshots API [mcs-lite-theme] [JSON] kind 1`] = `
<div>
  <pre>
    {
      \"data\": [
        \"default\",
        \"primary\",
        \"success\",
        \"error\",
        \"warning\"
      ]
    }
  </pre>
</div>
`;

exports[`Storyshots API [mcs-lite-theme] [JSON] theme 1`] = `
<div>
  <pre>
    {
      \"data\": {
        \"color\": {
          \"black\": \"#353630\",
          \"grayBase\": \"#999A94\",
          \"grayDark\": \"#D1D2D3\",
          \"grayLight\": \"#FAFAFA\",
          \"white\": \"#FFFFFF\",
          \"default\": \"#FAFAFA\",
          \"primary\": \"#00A1DE\",
          \"success\": \"#69BE28\",
          \"error\": \"#F5364E\",
          \"warning\": \"#F39A1E\"
        },
        \"base\": {
          \"bodyBackground\": \"#F1F2F7\",
          \"fontSize\": \"14px\",
          \"lineHeight\": 1.5
        },
        \"fontSize\": {
          \"small\": \"86%\",
          \"p\": \"1rem\",
          \"h6\": \"1rem\",
          \"h5\": \"1rem\",
          \"h4\": \"1.14rem\",
          \"h3\": \"1.43rem\",
          \"h2\": \"1.71rem\",
          \"h1\": \"2.43rem\"
        }
      }
    }
  </pre>
</div>
`;

exports[`Storyshots B API 1`] = `
<b
  className="dbJQUp">
  Bold content
</b>
`;

exports[`Storyshots B CJK 1`] = `
<h4
  className="kqHMIM"
  color="black">
  <b
    className="dbJQUp">
    控制開關粗體字
  </b>
</h4>
`;

exports[`Storyshots B With color 1`] = `
<div
  className="hEzGry"
  color="primary">
  Nisi eu eiusmod cupidatat aute laboris commodo excepteur
  <b
    className="dbJQUp">
     Bold content 
  </b>
  incididunt incididunt aliquip pariatur est minim officia sit.
</div>
`;

exports[`Storyshots B Within <P> 1`] = `
<div
  className="cqMgnG"
  color="black">
  Nisi eu eiusmod cupidatat aute laboris commodo excepteur
  <small
    className="gAkaPt">
    <b
      className="dbJQUp">
       Bold content 
    </b>
  </small>
  incididunt incididunt aliquip pariatur est minim officia sit.
</div>
`;

exports[`Storyshots Button API 1`] = `
<button
  className="kZUKef"
  kind="primary">
  Simple button
</button>
`;

exports[`Storyshots Button Overriding style 1`] = `
<button
  className="cGHGHW"
  kind="primary"
  onClick={[Function]}>
  Overriding style
</button>
`;

exports[`Storyshots Button With kind props 1`] = `
<div
  className="epDjBm">
  <button
    className="jcNvPR"
    kind="default"
    onClick={[Function]}>
    default
  </button>
  <button
    className="kZUKef"
    kind="primary"
    onClick={[Function]}>
    primary
  </button>
  <button
    className="bLDkry"
    kind="success"
    onClick={[Function]}>
    success
  </button>
  <button
    className="RoXxk"
    kind="error"
    onClick={[Function]}>
    error
  </button>
  <button
    className="geeLNp"
    kind="warning"
    onClick={[Function]}>
    warning
  </button>
</div>
`;

exports[`Storyshots Button With theme provider (Material) 1`] = `
<div
  className="epDjBm">
  <button
    className="kvvfAI"
    kind="default"
    onClick={[Function]}>
    default
  </button>
  <button
    className="fxzMxK"
    kind="primary"
    onClick={[Function]}>
    primary
  </button>
  <button
    className="gohZrY"
    kind="success"
    onClick={[Function]}>
    success
  </button>
  <button
    className="jLrOaK"
    kind="error"
    onClick={[Function]}>
    error
  </button>
  <button
    className="dlxLVY"
    kind="warning"
    onClick={[Function]}>
    warning
  </button>
</div>
`;

exports[`Storyshots Card API 1`] = `
<div
  className="eHLExQ">
  Card Content
</div>
`;

exports[`Storyshots DataChannel DataChannel.ControlFloat 1`] = `
<div
  className="hPwCMI"
  onChange={[Function]}>
  <div
    className="fROLJM">
    <a
      href="">
      Link
    </a>
  </div>
  <div
    className="dJSrbi">
    <div>
      <input
        onChange={[Function]}
        step="any"
        type="number"
        value={undefined} />
      <button
        className="kZUKef"
        kind="primary"
        onClick={[Function]}>
        Submit
      </button>
    </div>
  </div>
  <div>
    <h4
      className="kqHMIM"
      color="black">
      Title
    </h4>
    <div
      className="jyQfel"
      color="grayBase">
      <small
        className="gAkaPt">
        123125125125125
      </small>
    </div>
    <hr
      className="jKIGsL" />
    <div
      className="ePRywc"
      color="black">
      <MockReactTextTruncate
        line={2}
        text="You can input description of controller here. You can input description of You can input description of controller here. You can input description of"
        truncateText=" ..." />
    </div>
  </div>
</div>
`;

exports[`Storyshots DataChannel DataChannel.ControlInteger 1`] = `
<div
  className="hPwCMI"
  onChange={[Function]}>
  <div
    className="fROLJM">
    <a
      href="">
      Link
    </a>
  </div>
  <div
    className="dJSrbi">
    <div>
      <input
        onChange={[Function]}
        step="1"
        type="number"
        value={undefined} />
      <button
        className="kZUKef"
        kind="primary"
        onClick={[Function]}>
        Submit
      </button>
    </div>
  </div>
  <div>
    <h4
      className="kqHMIM"
      color="black">
      Title
    </h4>
    <div
      className="jyQfel"
      color="grayBase">
      <small
        className="gAkaPt">
        123125125125125
      </small>
    </div>
    <hr
      className="jKIGsL" />
    <div
      className="ePRywc"
      color="black">
      <MockReactTextTruncate
        line={2}
        text="You can input description of controller here. You can input description of You can input description of controller here. You can input description of"
        truncateText=" ..." />
    </div>
  </div>
</div>
`;

exports[`Storyshots DataChannel DataChannel.ControlSwitch 1`] = `
<div
  className="hPwCMI"
  onChange={[Function]}>
  <div
    className="fROLJM">
    <a
      href="">
      Link
    </a>
  </div>
  <div
    className="dJSrbi">
    <div
      checked={false}
      className="hBmCMm"
      onClick={[Function]} />
  </div>
  <div>
    <h4
      className="kqHMIM"
      color="black">
      Title
    </h4>
    <div
      className="jyQfel"
      color="grayBase">
      <small
        className="gAkaPt">
        123125125125125
      </small>
    </div>
    <hr
      className="jKIGsL" />
    <div
      className="ePRywc"
      color="black">
      <MockReactTextTruncate
        line={2}
        text="You can input description of controller here. You can input description of You can input description of controller here. You can input description of"
        truncateText=" ..." />
    </div>
  </div>
</div>
`;

exports[`Storyshots DataChannelCard API 1`] = `
<div
  className="hPwCMI">
  <div
    className="fROLJM">
    <a
      href="">
      Link
    </a>
  </div>
  <div
    className="dJSrbi">
    Children
  </div>
  <div>
    <h4
      className="kqHMIM"
      color="black">
      Title
    </h4>
    <div
      className="jyQfel"
      color="grayBase">
      <small
        className="gAkaPt">
        Last data point time : 2015-06-12 12:00
      </small>
    </div>
    <hr
      className="jKIGsL" />
    <div
      className="ePRywc"
      color="black">
      <MockReactTextTruncate
        line={2}
        text="You can input description of controller here. You can input description of You can input description of controller here. You can input description of"
        truncateText=" ..." />
    </div>
  </div>
</div>
`;

exports[`Storyshots DataChannelCard Fixed width 1`] = `
<div
  className="hVuYrW hPwCMI">
  <div
    className="fROLJM">
    V
  </div>
  <div
    className="dJSrbi">
    <div
      checked={false}
      className="hBmCMm" />
  </div>
  <div>
    <h4
      className="kqHMIM"
      color="black">
      Title
    </h4>
    <div
      className="jyQfel"
      color="grayBase">
      <small
        className="gAkaPt">
        Last data point time : 2015-06-12 12:00
      </small>
    </div>
    <hr
      className="jKIGsL" />
    <div
      className="ePRywc"
      color="black">
      <MockReactTextTruncate
        line={2}
        text="You can input description of controller here. You can input description of You can input description of controller here. You can input description of"
        truncateText=" ..." />
    </div>
  </div>
</div>
`;

exports[`Storyshots Heading API 1`] = `
<h1
  className="fwDbfe"
  color="black">
  Level 1
</h1>
`;

exports[`Storyshots Heading With color props 1`] = `
<div>
  <h2
    className="jqocls"
    color="black">
    Level 2 
    black
  </h2>
  <h2
    className="bERyZV"
    color="grayBase">
    Level 2 
    grayBase
  </h2>
  <h2
    className="doouNK"
    color="grayDark">
    Level 2 
    grayDark
  </h2>
  <h2
    className="jlswaz"
    color="grayLight">
    Level 2 
    grayLight
  </h2>
  <h2
    className="iAWgMf"
    color="white">
    Level 2 
    white
  </h2>
  <h2
    className="jlswaz"
    color="default">
    Level 2 
    default
  </h2>
  <h2
    className="bEllWn"
    color="primary">
    Level 2 
    primary
  </h2>
  <h2
    className="rmutG"
    color="success">
    Level 2 
    success
  </h2>
  <h2
    className="eYTobf"
    color="error">
    Level 2 
    error
  </h2>
  <h2
    className="lgGZbt"
    color="warning">
    Level 2 
    warning
  </h2>
</div>
`;

exports[`Storyshots Heading With level props 1`] = `
<div>
  <h1
    className="fwDbfe"
    color="black">
    h
    1
     - Level 
    1
       (
    2.43rem
     = 
    34.02px
    )
  </h1>
  <h2
    className="jqocls"
    color="black">
    h
    2
     - Level 
    2
       (
    1.71rem
     = 
    23.939999999999998px
    )
  </h2>
  <h3
    className="LPHYu"
    color="black">
    h
    3
     - Level 
    3
       (
    1.43rem
     = 
    20.02px
    )
  </h3>
  <h4
    className="kqHMIM"
    color="black">
    h
    4
     - Level 
    4
       (
    1.14rem
     = 
    15.959999999999999px
    )
  </h4>
  <h5
    className="iyjEQr"
    color="black">
    h
    5
     - Level 
    5
       (
    1rem
     = 
    14px
    )
  </h5>
  <h6
    className="iyjEQr"
    color="black">
    h
    6
     - Level 
    6
       (
    1rem
     = 
    14px
    )
  </h6>
</div>
`;

exports[`Storyshots P API 1`] = `
<p
  className="cqMgnG"
  color="black">
  Nisi eu eiusmod cupidatat aute laboris commodo excepteur esse dolore incididunt incididunt aliquip pariatur est minim officia sit. Nulla pariatur duis duis quis commodo cupidatat voluptate enim culpa elit adipisicing do cupidatat sint anim. Cillum elit magna occaecat proident sit cupidatat ad quis sunt id culpa culpa. Ad duis nulla in incididunt amet consequat officia ad voluptate voluptate. Pariatur eiusmod ullamco cupidatat non magna officia aute magna deserunt qui aute dolor eu. Qui amet non ex cillum sunt ad velit consequat ipsum velit.
</p>
`;

exports[`Storyshots P Nested children with div 1`] = `
<div
  className="cqMgnG"
  color="black">
  <div>
    <span>
      Qui amet non ex cillum sunt ad velit consequat ipsum velit.
    </span>
  </div>
</div>
`;

exports[`Storyshots P With color props 1`] = `
<div>
  <div
    className="cqMgnG"
    color="black">
    Paragraph 
    black
  </div>
  <div
    className="jyQfel"
    color="grayBase">
    Paragraph 
    grayBase
  </div>
  <div
    className="iChNxS"
    color="grayDark">
    Paragraph 
    grayDark
  </div>
  <div
    className="kUcDrP"
    color="grayLight">
    Paragraph 
    grayLight
  </div>
  <div
    className="eJSHFJ"
    color="white">
    Paragraph 
    white
  </div>
  <div
    className="kUcDrP"
    color="default">
    Paragraph 
    default
  </div>
  <div
    className="hEzGry"
    color="primary">
    Paragraph 
    primary
  </div>
  <div
    className="ciVPjB"
    color="success">
    Paragraph 
    success
  </div>
  <div
    className="hrGHNS"
    color="error">
    Paragraph 
    error
  </div>
  <div
    className="cWPeCi"
    color="warning">
    Paragraph 
    warning
  </div>
</div>
`;

exports[`Storyshots Small API 1`] = `
<small
  className="gAkaPt">
  Small content
</small>
`;

exports[`Storyshots Small With color 1`] = `
<div
  className="hEzGry"
  color="primary">
  Nisi eu eiusmod cupidatat aute laboris commodo excepteur
  <small
    className="gAkaPt">
     Small content 
  </small>
  incididunt incididunt aliquip pariatur est minim officia sit.
</div>
`;

exports[`Storyshots Small Within <P> 1`] = `
<div
  className="cqMgnG"
  color="black">
  Nisi eu eiusmod cupidatat aute laboris commodo excepteur
  <small
    className="gAkaPt">
     Small content 
  </small>
  incididunt incididunt aliquip pariatur est minim officia sit.
</div>
`;

exports[`Storyshots Switch API 1`] = `
<div>
  <div
    checked={false}
    className="hBmCMm" />
  <div
    checked={true}
    className="ihmkZm" />
</div>
`;

exports[`Storyshots Switch Overriding style 1`] = `
<div
  checked={false}
  className="YBIqr"
  onClick={[Function]} />
`;

exports[`Storyshots Switch Stateful switch 1`] = `
<div
  checked={false}
  className="hBmCMm"
  onClick={[Function]} />
`;
